# MiniShell

./: .clang-tidy  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
include/: AST_executor.h  executor.h  history.h  line_editor.h  signal_handler.h  token.h
minishell_pkg/DEBIAN/: control  postinst  postrm
minishell_pkg/usr/share/applications/: minishell.desktop  mnsh.desktop
model/: ASTNode.h
src/: AST_executor.cpp  executor.cpp  history.cpp  line_editor.cpp  parser.cpp  shell.cpp  signal_handler.cpp  token.cpp
